RESOLVED FIXED268117
Speedometer 3: Fix the overflow:scroll layerization on TodoMVC-React-Complex-DOM
https://bugs.webkit.org/show_bug.cgi?id=268117
Summary Speedometer 3: Fix the overflow:scroll layerization on TodoMVC-React-Complex-DOM
Matt Woodrow
Reported 2024-01-25 15:58:24 PST
<rdar://113239854> This page generates >800 layers for the position:relative icons in the scroller. We should be able to avoid it and determine that they can share with the scroller itself.
Attachments
Matt Woodrow
Comment 1 2024-01-25 16:24:16 PST
Matt Woodrow
Comment 2 2024-01-28 11:51:11 PST
Cameron McCormack (:heycam)
Comment 3 2024-06-06 18:18:43 PDT
EWS
Comment 4 2024-06-09 14:19:13 PDT
Committed 279868@main (dc1354a1d26d): <https://commits.webkit.org/279868@main> Reviewed commits have been landed. Closing PR #29606 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.